add spell check dictionary

--- a/notebooks/1_data_exploration.ipynb
+++ b/notebooks/1_data_exploration.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "# Identifying duplicate reviews\n",
     "\n",
-    "duplicates = len(data[data.duplicated(subset = 'review')])\n",
+    "duplicates = len(data[data.duplicated()])\n",
     "\n",
     "print('Duplicates found:', duplicates)"
    ]
