add tokenizer comparison plot

--- a/notebooks/1_data_exploration.ipynb
+++ b/notebooks/1_data_exploration.ipynb
@@ -20,7 +20,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from transformers import BertTokenizer"
+    "from transformers import BertTokenizer, DistilBertTokenizer, RobertaTokenizer"
    ]
   },
   {
@@ -139,25 +139,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exploring BERT token length distribution BEFORE data cleaning\n",
+    "# Exploring DistilBERT, BERT and RoBERTa token length distribution BEFORE data cleaning\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "bert_tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "distilbert_tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
+    "roberta_tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
     "\n",
-    "over_512 = 0\n",
-    "within_512 = 0\n",
-    "\n",
-    "token_count_list = []\n",
+    "bert_token_count_list = []\n",
+    "distilbert_token_count_list = []\n",
+    "roberta_token_count_list = []\n",
     "\n",
     "for review in data['review']:\n",
-    "    token_count = len(tokenizer.tokenize(review)) + 2\n",
-    "    token_count_list.append(token_count)\n",
-    "    if token_count > 512:\n",
-    "        over_512 += 1\n",
-    "    else:\n",
-    "        within_512 +=1\n",
+    "    # Tokenizing (BERT)\n",
+    "    bert_token_count = len(bert_tokenizer.tokenize(review)) + 2\n",
+    "    bert_token_count_list.append(bert_token_count)\n",
+    "    # Tokenizing (DistilBERT)\n",
+    "    distilbert_token_count = len(distilbert_tokenizer.tokenize(review)) + 2\n",
+    "    distilbert_token_count_list.append(distilbert_token_count)\n",
+    "    # Tokenizing (RoBERTa)\n",
+    "    roberta_token_count = len(roberta_tokenizer.tokenize(review)) + 2\n",
+    "    roberta_token_count_list.append(roberta_token_count)\n",
     "\n",
-    "print('Number of reviews with more than 512 tokens:', over_512)\n",
-    "print('Number of reviews with 512 tokens or fewer:', within_512)"
+    "# Counting number of reviews with more than 512 tokens for each tokenizer\n",
+    "bert_over_512 = sum([1 for count in bert_token_count_list if count > 512])\n",
+    "distilbert_over_512 = sum([1 for count in distilbert_token_count_list if count > 512])\n",
+    "roberta_over_512 = sum([1 for count in roberta_token_count_list if count > 512])"
    ]
   },
   {
@@ -169,12 +175,38 @@
     "# Plotting BERT token length distribution BEFORE data cleaning\n",
     "\n",
     "plt.figure(figsize = (10, 3))\n",
-    "plt.hist(token_count_list, bins = 150, edgecolor = 'black', color = 'orange', alpha = 0.7)\n",
+    "plt.hist(bert_token_count_list, bins = 150, edgecolor = 'black', color = 'orange', alpha = 0.7)\n",
     "plt.axvline(x = 512, color = 'red', linestyle = '--', linewidth = 1.5) \n",
     "plt.xlabel('Number of Tokens')\n",
     "plt.ylabel('Frequency')\n",
-    "plt.title('Distribution of Token Lengths BEFORE data cleaning')\n",
+    "plt.title('Token Length Cut-off for BERT before Data Cleaning')\n",
     "plt.grid(axis = 'y', linestyle = '--', alpha = 0.6)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plotting token length distribution for DistilBERT, BERT, and RoBERTa for comparison\n",
+    "\n",
+    "plt.figure(figsize = (10, 3))\n",
+    "\n",
+    "plt.hist(distilbert_token_count_list, bins = 150, alpha = 0.5,\n",
+    "         edgecolor = 'black', color = 'blue', label = 'DistilBERT', linewidth = 0.5)\n",
+    "plt.hist([x + 500 for x in bert_token_count_list], bins = 150, alpha = 0.5,\n",
+    "         edgecolor = 'black', color = 'orange', label = 'BERT', linewidth = 0.5)\n",
+    "plt.hist([x + 1000 for x in roberta_token_count_list], bins = 150, alpha = 0.5,\n",
+    "         edgecolor = 'black', color = 'green', label = 'RoBERTa', linewidth = 0.5)\n",
+    "\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Tokenizer Comparison for DistilBERT, BERT, and RoBERTa')\n",
+    "plt.grid(axis = 'y', linestyle = '--', alpha = 0.6)\n",
+    "plt.xticks([])\n",
+    "plt.legend()\n",
     "\n",
     "plt.show()"
    ]
