one-hot-encode labels + split data

--- a/notebooks/2_data_cleaning.ipynb
+++ b/notebooks/2_data_cleaning.ipynb
@@ -12,11 +12,13 @@
    "metadata": {},
    "source": [
     "- [Step 1: Removing duplicates](#step-1-removing-duplicates)\n",
-    "- [Step 2: Removing HTML, brackets & special characters](#step-2-removing-html-brackets--special-characters)\n",
-    "- [Step 3: Handling contractions](#step-3-handling-contractions)\n",
-    "- [Step 4: Applying spell check](#step-4-applying-spell-check)\n",
-    "- [Step 5: Converting to lowercase](#step-5-converting-to-lowercase)\n",
-    "- [Step 6: Applying BERT tokenizer + [UNK]nown](#step-6-applying-bert-tokenizer--unknown)"
+    "- [Step 2: One-Hot-encoding labels](#step-2-one-hot-encoding-labels)\n",
+    "- [Step 3: Removing HTML, brackets & special characters](#step-3-removing-html-brackets--special-characters)\n",
+    "- [Step 4: Handling contractions](#step-4-handling-contractions)\n",
+    "- [Step 5: Applying spell check](#step-5-applying-spell-check)\n",
+    "- [Step 6: Converting to lowercase](#step-6-converting-to-lowercase)\n",
+    "- [Step 7: Train-Test split the data](#step-7-train-test-split-the-data)\n",
+    "- [Step 8: Saving preprocessed data](#step-8-saving-preprocessed-data)"
    ]
   },
   {
@@ -32,9 +34,8 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "from textwrap import fill\n",
     "from symspellpy import SymSpell, Verbosity\n",
-    "from transformers import BertTokenizer"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -85,7 +86,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 2: Removing HTML, brackets & special characters"
+    "##### Step 2: One-Hot-encoding labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['sentiment'] = data['sentiment'].map({'negative': 0, 'positive': 1})\n",
+    "\n",
+    "data.sample(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Step 3: Removing HTML, brackets & special characters"
    ]
   },
   {
@@ -118,9 +137,9 @@
     "    # Replace '\\', '/' and '>' with a space\n",
     "    text = re.sub(r'[\\\\/>]', ' ', text)\n",
     "    # Replace multiple spaces with a single space\n",
-    "    cleaned_text = re.sub(r'\\s+', ' ', text)\n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
     "    # Replace ' & ' with 'and'\n",
-    "    # cleaned_text = re.sub(r' \\& ', ' and ', text)\n",
+    "    cleaned_text = re.sub(r' \\& ', ' and ', text)\n",
     "    \n",
     "    return cleaned_text\n",
     "\n",
@@ -145,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 3: Handling contractions"
+    "##### Step 4: Handling contractions"
    ]
   },
   {
@@ -164,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 4: Applying spell check"
+    "##### Step 5: Applying spell check"
    ]
   },
   {
@@ -209,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 5: Converting to lowercase"
+    "##### Step 6: Converting to lowercase"
    ]
   },
   {
@@ -225,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 6: Applying BERT tokenizer + [UNK]nown"
+    "##### Step 7: Train-Test split the data"
    ]
   },
   {
@@ -234,14 +253,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "train_data, test_data = train_test_split(data, test_size = 0.2, random_state = 42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Step 8: Saving preprocessed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data.to_csv('../data/train_data.csv', index = False)\n",
     "\n",
-    "def tokenize_text(text):\n",
-    "    return tokenizer(text, padding = 'max_length', truncation = True, max_length = 512, return_tensors = 'pt')\n",
-    "\n",
-    "data['review'] = data['review'].apply(lambda x: tokenize_text(x))\n",
-    "\n",
-    "data.sample().iloc[0, 0]"
+    "test_data.to_csv('../data/test_data.csv', index = False)"
    ]
   }
  ],
