add roberta model training + metrics

--- a/notebooks/5_model_roberta.ipynb
+++ b/notebooks/5_model_roberta.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# BERT"
+    "# RoBERTa"
    ]
   },
   {
@@ -29,7 +29,7 @@
     "from torch.optim.lr_scheduler import StepLR\n",
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
-    "from transformers import BertTokenizer, BertForSequenceClassification, AdamW"
+    "from transformers import RobertaTokenizer, RobertaForSequenceClassification, AdamW"
    ]
   },
   {
@@ -45,10 +45,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv('../data/train_data.csv')\n",
-    "test_df = pd.read_csv('../data/test_data.csv')\n",
+    "train_df = pd.read_csv('train_data.csv')\n",
+    "test_df = pd.read_csv('test_data.csv')\n",
     "\n",
-    "tokenizer = BertTokenizer.from_pretrained('bert-base-uncased')\n",
+    "tokenizer = RobertaTokenizer.from_pretrained('roberta-base')\n",
     "\n",
     "train_encodings = tokenizer(list(train_df['review']), truncation = True, padding = True, max_length = 512, return_tensors = 'pt')\n",
     "test_encodings = tokenizer(list(test_df['review']), truncation = True, padding = True, max_length = 512, return_tensors = 'pt')\n",
@@ -78,7 +78,7 @@
     "\n",
     "# Device setup and model initialization\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "model = BertForSequenceClassification.from_pretrained('bert-base-uncased', num_labels = 2).to(device)\n",
+    "model = RobertaForSequenceClassification.from_pretrained('roberta-base', num_labels = 2).to(device)\n",
     "optimizer = AdamW(model.parameters(), lr = 2e-5)\n",
     "\n",
     "# Initialize scheduler\n",
@@ -151,7 +151,7 @@
     "with open('metrics_per_epoch.json', 'w') as f:\n",
     "    json.dump(metrics_per_epoch, f, indent = 4)\n",
     "\n",
-    "model.save_pretrained('./bert_model')"
+    "model.save_pretrained('./roberta_model')"
    ]
   }
  ],
