add new test data pipeline

--- a/notebooks/6_ new_test_data.ipynb
+++ b/notebooks/6_ new_test_data.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Cleaning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- [Step 1: Removing duplicates](#step-1-removing-duplicates)\n",
-    "- [Step 2: One-Hot-encoding labels](#step-2-one-hot-encoding-labels)\n",
-    "- [Step 3: Removing HTML, brackets & special characters](#step-3-removing-html-brackets--special-characters)\n",
-    "- [Step 4: Handling contractions](#step-4-handling-contractions)\n",
-    "- [Step 5: Applying spell check](#step-5-applying-spell-check)\n",
-    "- [Step 6: Converting to lowercase](#step-6-converting-to-lowercase)\n",
-    "- [Step 7: Train-Test split the data](#step-7-train-test-split-the-data)\n",
-    "- [Step 8: Saving preprocessed data](#step-8-saving-preprocessed-data)"
+    "# New Test Data"
    ]
   },
   {
@@ -30,32 +16,25 @@
     "# Imports\n",
     "\n",
     "import re\n",
+    "import torch\n",
     "import contractions\n",
-    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import gc\n",
     "\n",
     "from symspellpy import SymSpell, Verbosity\n",
-    "from sklearn.model_selection import train_test_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv('../data/imdb_train.csv')\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from transformers import DistilBertForSequenceClassification, DistilBertTokenizer, AutoConfig\n",
     "\n",
-    "print(data.shape)\n",
-    "\n",
-    "data.head(3)"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 1: Removing duplicates"
+    "### Load final test data"
    ]
   },
   {
@@ -64,29 +43,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "duplicates = data[data.duplicated()]\n",
-    "\n",
-    "print('Duplicates found:', len(duplicates))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Removing duplicates\n",
-    "\n",
-    "data = data.drop_duplicates()\n",
-    "\n",
-    "print('Remaining reviews:', data.shape[0])"
+    "final_test_data = pd.read_csv('../data/check.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Step 2: One-Hot-encoding labels"
+    "### Preprocessing final test data"
    ]
   },
   {
@@ -95,24 +59,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['sentiment'] = data['sentiment'].map({'negative': 0, 'positive': 1})\n",
+    "# One-Hot-Encoding the labels\n",
     "\n",
-    "data.sample(10)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Step 3: Removing HTML, brackets & special characters"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "final_test_data['sentiment'] = final_test_data['sentiment'].map({'negative': 0, 'positive': 1})\n",
+    "\n",
+    "\n",
     "# Removing HTML line-breaks + links\n",
     "\n",
     "def remove_html_links(review_text):\n",
@@ -143,55 +94,19 @@
     "    \n",
     "    return cleaned_text\n",
     "\n",
-    "data['review'] = data['review'].apply(remove_html_links)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Replacing brackets\n",
+    "final_test_data['review'] = final_test_data['review'].apply(remove_html_links)\n",
     "\n",
-    "# def replace_brackets(text):\n",
-    "#     text = re.sub(r'[\\[{]', '(', text)\n",
-    "#     text = re.sub(r'[\\]}]', ')', text)\n",
-    "#     return text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Step 4: Handling contractions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
+    "# Handling contractions\n",
+    "\n",
     "def expand_contractions(text):\n",
     "    return contractions.fix(text)\n",
     "\n",
-    "data['review'] = data['review'].apply(expand_contractions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Step 5: Applying spell check"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "final_test_data['review'] = final_test_data['review'].apply(expand_contractions)\n",
+    "\n",
+    "\n",
+    "# Applying spell check\n",
+    "\n",
     "sym_spell = SymSpell(max_dictionary_edit_distance = 2, prefix_length = 7)\n",
     "\n",
     "sym_spell.load_dictionary('../data/frequency_dictionary_en_82_765.txt', term_index = 0, count_index = 1)\n",
@@ -221,57 +136,118 @@
     "                result += ' ' + token\n",
     "    return result.strip()\n",
     "\n",
-    "data['review'] = data['review'].apply(spell_check)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Step 6: Converting to lowercase"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['review'] = data['review'].str.lower()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Step 7: Train-Test split the data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data, test_data = train_test_split(data, test_size = 0.2, random_state = 42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Step 8: Saving preprocessed data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data.to_csv('../data/train_data.csv', index = False)\n",
+    "final_test_data['review'] = final_test_data['review'].apply(spell_check)\n",
     "\n",
-    "test_data.to_csv('../data/test_data.csv', index = False)"
+    "\n",
+    "# Converting to lowercase\n",
+    "\n",
+    "final_test_data['review'] = final_test_data['review'].str.lower()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load model, tokenizer and config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = AutoConfig.from_pretrained('../models/distilbert/config.json')\n",
+    "tokenizer = DistilBertTokenizer.from_pretrained('distilbert-base-uncased')\n",
+    "model = DistilBertForSequenceClassification.from_pretrained('../models/distilbert', config = config)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tokenizing final test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviews = final_test_data['review'].tolist()\n",
+    "true_labels = final_test_data['sentiment'].tolist()\n",
+    "\n",
+    "inputs = tokenizer(reviews, padding = True, truncation = True, return_tensors = 'pt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Making predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 2\n",
+    "chunk_size = 100\n",
+    "\n",
+    "predictions = []\n",
+    "\n",
+    "for start in range(0, len(inputs['input_ids']), chunk_size):\n",
+    "    end = min(start + chunk_size, len(inputs['input_ids']))\n",
+    "    chunk_dataset = TensorDataset(inputs['input_ids'][start:end], inputs['attention_mask'][start:end])\n",
+    "    chunk_dataloader = DataLoader(chunk_dataset, batch_size = batch_size, num_workers = 0)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        for batch in chunk_dataloader:\n",
+    "            batch_input_ids, batch_attention_mask = batch\n",
+    "            batch_inputs = {\n",
+    "                'input_ids': batch_input_ids.to('cpu'),\n",
+    "                'attention_mask': batch_attention_mask.to('cpu')\n",
+    "            }\n",
+    "            outputs = model(**batch_inputs)\n",
+    "            logits = outputs.logits\n",
+    "            batch_predictions = torch.argmax(logits, dim = 1).cpu().numpy()\n",
+    "            predictions.extend(batch_predictions)\n",
+    "\n",
+    "            del batch_inputs, outputs\n",
+    "            gc.collect()\n",
+    "\n",
+    "with open('../models/predictions.txt', 'w') as f:\n",
+    "    for item in predictions:\n",
+    "        f.write(f\"{item}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculating metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../models/predictions.txt', 'r') as file:\n",
+    "    predictions = [int(line) for line in file]\n",
+    "\n",
+    "print('Truth:', true_labels[:25])\n",
+    "print('Preds:', predictions[:25],'\\n')\n",
+    "\n",
+    "accuracy = accuracy_score(true_labels, predictions)\n",
+    "\n",
+    "print(f\"Accuracy on the new test set: {accuracy:.2%}\\n\")\n",
+    "\n",
+    "print(classification_report(true_labels, predictions, target_names = ['negative', 'positive']))"
    ]
   }
  ],
