update test data pipeline

--- a/notebooks/6_ new_test_data.ipynb
+++ b/notebooks/6_ new_test_data.ipynb
@@ -43,7 +43,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_test_data = pd.read_csv('../data/check.csv')"
+    "final_test_data = pd.read_csv('../data/imdb_review_test_only.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_test_data.head()"
    ]
   },
   {
@@ -61,7 +70,7 @@
    "source": [
     "# One-Hot-Encoding the labels\n",
     "\n",
-    "final_test_data['sentiment'] = final_test_data['sentiment'].map({'negative': 0, 'positive': 1})\n",
+    "# final_test_data['sentiment'] = final_test_data['sentiment'].map({'negative': 0, 'positive': 1})\n",
     "\n",
     "\n",
     "# Removing HTML line-breaks + links\n",
@@ -176,7 +185,7 @@
    "outputs": [],
    "source": [
     "reviews = final_test_data['review'].tolist()\n",
-    "true_labels = final_test_data['sentiment'].tolist()\n",
+    "# true_labels = final_test_data['sentiment'].tolist()\n",
     "\n",
     "inputs = tokenizer(reviews, padding = True, truncation = True, return_tensors = 'pt')"
    ]
@@ -194,8 +203,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 2\n",
-    "chunk_size = 100\n",
+    "# Move the model to GPU\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "model.to(device)\n",
+    "\n",
+    "batch_size = 32\n",
+    "chunk_size = 500\n",
     "\n",
     "predictions = []\n",
     "\n",
@@ -206,20 +219,24 @@
     "\n",
     "    with torch.no_grad():\n",
     "        for batch in chunk_dataloader:\n",
+    "            # Move batch to GPU\n",
     "            batch_input_ids, batch_attention_mask = batch\n",
     "            batch_inputs = {\n",
-    "                'input_ids': batch_input_ids.to('cpu'),\n",
-    "                'attention_mask': batch_attention_mask.to('cpu')\n",
+    "                'input_ids': batch_input_ids.to(device),\n",
+    "                'attention_mask': batch_attention_mask.to(device)\n",
     "            }\n",
     "            outputs = model(**batch_inputs)\n",
     "            logits = outputs.logits\n",
-    "            batch_predictions = torch.argmax(logits, dim = 1).cpu().numpy()\n",
+    "            batch_predictions = torch.argmax(logits, dim = 1).cpu().numpy()  # Move to CPU for saving\n",
     "            predictions.extend(batch_predictions)\n",
     "\n",
+    "            # Clean up\n",
     "            del batch_inputs, outputs\n",
     "            gc.collect()\n",
+    "            torch.cuda.empty_cache()  # Clear GPU cache\n",
     "\n",
-    "with open('../models/predictions.txt', 'w') as f:\n",
+    "# Save predictions to file\n",
+    "with open('predictions.txt', 'w') as f:\n",
     "    for item in predictions:\n",
     "        f.write(f\"{item}\\n\")"
    ]
@@ -237,17 +254,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../models/predictions.txt', 'r') as file:\n",
-    "    predictions = [int(line) for line in file]\n",
+    "# with open('../models/predictions.txt', 'r') as file:\n",
+    "#     predictions = [int(line) for line in file]\n",
     "\n",
-    "print('Truth:', true_labels[:25])\n",
-    "print('Preds:', predictions[:25],'\\n')\n",
+    "# print('Truth:', true_labels[:25])\n",
+    "# print('Preds:', predictions[:25],'\\n')\n",
     "\n",
-    "accuracy = accuracy_score(true_labels, predictions)\n",
+    "# accuracy = accuracy_score(true_labels, predictions)\n",
     "\n",
-    "print(f\"Accuracy on the new test set: {accuracy:.2%}\\n\")\n",
+    "# print(f\"Accuracy on the new test set: {accuracy:.2%}\\n\")\n",
     "\n",
-    "print(classification_report(true_labels, predictions, target_names = ['negative', 'positive']))"
+    "# print(classification_report(true_labels, predictions, target_names = ['negative', 'positive']))"
    ]
   }
  ],
